# flightspotter

./: .gitignore  LICENSE  README.md  flightspotter.sln  pyproject.toml
.github/workflows/: main_airlookup.yml  main_flightspotter.yml
AirLookup/: README.md  __main__.py  airlookup.py  airlookup.spec  pyproject.toml
AircraftDataSync/: AircraftDataSync.csproj  AircraftSync.cs  Program.cs  README.md
FlightSpotter.Web/: FlightSpotter.Web.csproj  Program.cs  README.md  appsettings.Development.json  appsettings.json
FlightSpotter.Web/Controllers/: AccountController.cs  FlightsController.cs
FlightSpotter.Web/Data/: registration_prefixes.json
FlightSpotter.Web/Models/: FlightEntity.cs
FlightSpotter.Web/Services/: FlightTableService.cs
FlightSpotter.Web/Views/Flights/: Index.cshtml
FlightSpotter.Web/Views/Shared/: _Layout.cshtml
FlightSpotter.Web/wwwroot/css/: site.css
